// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="quality_profiles.delete_confirm_title"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        quality_profiles.delete_confirm_title
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p>
        quality_profiles.are_you_sure_want_delete_profile_x.name.JavaScript
      </p>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        className="button-red"
        disabled={false}
      >
        delete
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: loading 1`] = `
<Modal
  contentLabel="quality_profiles.delete_confirm_title"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        quality_profiles.delete_confirm_title
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p>
        quality_profiles.are_you_sure_want_delete_profile_x.name.JavaScript
      </p>
    </div>
    <div
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        className="button-red"
        disabled={true}
      >
        delete
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: profile has children 1`] = `
<Modal
  contentLabel="quality_profiles.delete_confirm_title"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        quality_profiles.delete_confirm_title
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <div>
        <Alert
          variant="warning"
        >
          quality_profiles.this_profile_has_descendants
        </Alert>
        <p>
          quality_profiles.are_you_sure_want_delete_profile_x_and_descendants.name.JavaScript
        </p>
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        className="button-red"
        disabled={false}
      >
        delete
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
